force-app/main/default/objects/CS_SatisfactionScore__c/CS_SatisfactionScore__c.object-meta.xml
<CustomObject>
    <description>Generated by CSAgent | 2026-04-22 | Stores customer 1–5 satisfaction rating for a resolved support case</description>
    <label>Satisfaction Score</label>
    <pluralLabel>Satisfaction Scores</pluralLabel>
    <nameField>
        <label>Score Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>