force-app/main/default/objects/CS_SatisfactionScore__c/fields/CS_Case__c.field-meta.xml
<CustomField>
    <fullName>CS_Case__c</fullName>
    <description>Generated by CSAgent | 2026-04-22 | The support Case this score relates to. Lookup (not master-detail) so scores are preserved if the Case is deleted.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Satisfaction Scores</relationshipLabel>
    <relationshipName>SatisfactionScores</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>