force-app/main/default/objects/CS_SatisfactionScore__c/fields/CS_CustomerNotes__c.field-meta.xml
<CustomField>
    <fullName>CS_CustomerNotes__c</fullName>
    <description>Generated by CSAgent | 2026-04-22 | Free-form feedback from the customer.</description>
    <label>Customer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>