force-app/main/default/objects/CS_SatisfactionScore__c/fields/CS_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_Date__c</fullName>
    <description>Generated by CSAgent | 2026-04-22 | Date the score was captured or assigned. Set by Flow (today).</description>
    <label>Score Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>