force-app/main/default/objects/CS_SatisfactionScore__c/fields/CS_Rating__c.field-meta.xml
<CustomField>
    <fullName>CS_Rating__c</fullName>
    <description>Generated by CSAgent | 2026-04-22 | Customer satisfaction score. Enforced 1–5 by Validation Rule.</description>
    <label>Rating (1–5)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>