force-app/main/default/objects/CS_SatisfactionScore__c/validationRules/CS_Rating_Range_1_to_5.validationRule-meta.xml
<ValidationRule>
    <fullName>CS_Rating_Range_1_to_5</fullName>
    <active>true</active>
    <description>Generated by CSAgent | 2026-04-22 | Blocks saves where Rating is non-null and outside 1–5 range. Allows blank on auto-create by Flow.</description>
    <errorConditionFormula>AND(NOT(ISNULL(CS_Rating__c)), OR(CS_Rating__c &lt; 1, CS_Rating__c &gt; 5))</errorConditionFormula>
    <errorDisplayField>CS_Rating__c</errorDisplayField>
    <errorMessage>Rating must be between 1 and 5.</errorMessage>
</ValidationRule>